<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">1号密码</string>
    <string name="action_add_password">添 加</string>
    <string name="user_name">账号：</string>
    <string name="title">标题：</string>
    <string name="url">网址：</string>
    <string name="category">类别</string>
    
    <string name="dialog_tilte">更多分类</string>
    
     <string name="category_select">请选择需要的类别</string>
    
    <string name="password">密码：</string>
    <string name="isTop">置顶</string>
    <string name="updata">修改</string>
    <string name="delete">删除</string>
    <string name="copy">复制</string>
    <string name="edit">修改</string>
    <string name="copy_name">复制账号到剪贴板</string>
    <string name="copy_name_toast">已复制账号到剪贴板</string>
    <string name="copy_password">复制密码到剪贴板</string>
    <string name="copy_password_toast">已复制密码到剪贴板</string>
    <string name="just">刚刚</string>
    <string name="minute_ago">%d分钟前</string>
    <string name="hour_ago">%d小时前</string>
    <string name="day_ago">%d天前</string>
    <string name="week_ago">%d周前</string>
    <string name="title_activity_add_password">添 加</string>
    <string name="title_activity_modify_password">修 改</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="action_save">保存</string>
    <string name="action_more">设置</string>
    <string name="action_import_and_export">密码导入导出</string>
    <string name="action_login_password">修改解锁图案</string>
    <string name="activity_title_eidt_password">解锁图案</string>
    <string name="action_display">显示方式</string>
    <string name="action_category_display">全部显示</string>
    <string name="action_all_display">分类显示</string>
    
    <string name="action_jazzy_effect">列表特效</string>
    <string name="action_feedback">意见反馈</string>
    <string name="feedback_send">发 送</string>
    <string name="feedback_hint">我的成长离不开您的支持，如有必要，还请留下您的联系方式。</string>
    <string name="feedback_sending">正在发送，请稍候&#8230;</string>
    <string name="feedback_thanks">非常感谢您的反馈</string>
    <string name="action_about_us">关于和说明</string>
    <string name="action_exit">退 出</string>
    <string name="action_recommend">精品推荐</string>
    
    <string name="alert_delete_message">删除后不可恢复，您确定吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="toast_password_has_deleted">该条密码已经被删除</string>
    <string name="add_password_note_hint">这里可以记录一些备注信息</string>
    <string name="add_password_title_hint">输入标题(必须)</string>
    <string name="add_password_name_hint">输入您的账号</string>
    <string name="add_password_password_hint">输入您的密码</string>
    <string name="add_password_save_no_data">标题不可为空</string>
    
    <string name="add_password_url_hint">www.example.com</string>
    
    <string name="copyright_description">Copyright © 2014 xuchongyan.\nAll Rights Reserved.</string>
    <string name="drawer_about_detail"> 1.该软件虽然需要联网，但是绝对不会上传您的密码数据。 \n 2.请不要存储如银行、支付宝相关关键密码，可以存储日常密码。 \n 3.本版本不提供密码找回功能，请牢记初始图案.\n  \n邮箱: xcy503305@163.com \n软件版本: %s\nCopyright © 2014 xuchongyan.\nAll Rights Reserved.</string>
    <string name="lock_pattern_error">图案错误</string>
    <string name="set_lock_pattern_first_message">亲爱的用户，您好！第一次使用软件，为了安全，您需要绘制一个解锁图案用于登录</string>
    <string name="set_lock_pattern_first_sure">确 定</string>
    <string name="set_lock_pattern_auth">请输入原解锁图案</string>
    <string name="set_lock_pattern_auth_ok">认证通过</string>
    <string name="set_lock_pattern_auth_error">图案错误，请重试</string>
    <string name="set_lock_pattern_first_step">请绘制解锁图案</string>
    <string name="set_lock_pattern_first_step_tips">图案已记录</string>
    <string name="set_lock_pattern_second_step">请再次绘制解锁图案</string>
    <string name="set_lock_pattern_second_step_error">图案与上次不一致，请重新绘制</string>
    <string name="set_lock_pattern_second_step_tips">设置成功，请牢记您的解锁图案</string>
    <string name="set_lock_pattern_step_tips">完成后松开手指</string>
    <string name="no_password_tips">您还没有保存过密码\n点击右上角图标增加几个吧</string>
    <string name="toast_key_back">再按一次 退出程序</string>
    <string name="import_form_sd">从SD卡导入</string>
    <string name="export_to_sd">导出到SD卡</string>
    <string name="export_dialog_attention">请您知道：\n1. 导出文件以文本形式保存，没有经过任何加密。请务必注意文件的安全！\n2. 导出的文件保存在SD卡 \"MyPassword/\" 目录下。\n3. 您可以使用第三方软件为导出文件加密。</string>
    <string name="export_dialog_i_known">我知道了</string>
    <string name="export_dialog_cancle">暂不导出</string>
    <string name="export_no_sdcard">SD卡不可用</string>
    <string name="export_ing">正在导出，请稍候&#8230;</string>
    <string name="export_successful">我的密码导出成功，密码保存文件名为：%s</string>
    <string name="toast_export_failed">导出失败</string>
    <string name="export_filename">yyy-MM-dd HH-mm-ss</string>
    <string name="import_search_file">正在搜索SD卡上的\"mp\"文件,请稍候&#8230;</string>
    <string name="import_search_failed">没有搜索到\"mp\"文件，请确认SD卡根目录或者是\"/XPassword\"目录下是否存在\"mp\"文件。</string>
    <string name="import_chiose_file">选择要导入的文件</string>
    <string name="import_ing">正在导入\"%s\"，请稍候&#8230;</string>
    <string name="import_sure">确 定</string>
    <string name="import_file_failed">文件已损坏，密码导入失败！</string>
    <string name="import_file_successs">导入成功，本次一共导入%d个密码。</string>
    <string name="common_sure">确 定</string>
</resources>