<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xcy.xpassword.XPasswordActivity" >

 
         <item
                android:id="@+id/action_display"
                android:icon="@drawable/ic_action_import_export"
                android:title="@string/action_display"
                android:orderInCategory="8"
                android:showAsAction="always">
                <menu>
                    <item
                        android:id="@+id/action_category_display"
                        android:icon="@drawable/ic_action_export"
                        android:title="@string/action_category_display">
                    </item>
                    <item
                        android:id="@+id/action_all_display"
                        android:icon="@drawable/ic_action_import"
                        android:title="@string/action_all_display">
                    </item>
                </menu>
            </item>
              
       <item
        android:icon="@drawable/ic_action_more"
        android:showAsAction="always"
         android:orderInCategory="9"
        android:title="@string/action_more">
        <menu>
            <item
                android:id="@+id/action_set_lock_pattern"
                android:icon="@drawable/ic_action_lock"
                android:title="@string/action_login_password">
            </item>
            <item
                android:id="@+id/action_import_and_export"
                android:icon="@drawable/ic_action_import_export"
                android:title="@string/action_import_and_export">
                <menu>
                    <item
                        android:id="@+id/action_export"
                        android:icon="@drawable/ic_action_export"
                        android:title="@string/export_to_sd">
                    </item>
                    <item
                        android:id="@+id/action_import"
                        android:icon="@drawable/ic_action_import"
                        android:title="@string/import_form_sd">
                    </item>
                </menu>
            </item>
          
          
       
			<item
                android:id="@+id/action_feedback"
                android:icon="@drawable/ic_action_feedback"
                android:title="@string/action_feedback">
            </item>
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_action_about"
                android:title="@string/action_about_us">
            </item>
            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_action_exit"
                android:title="@string/action_recommend">
            </item>
        </menu>
    </item>
      
    <item
        android:id="@+id/action_add_password"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/action_add_password"/>

</menu>

