<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context="com.xcy.xpassword.EditPasswordActivity" >

    <LinearLayout
        android:id="@+id/root_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/common_card_background"
        android:orientation="vertical" >

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:gravity="left"
                android:id="@+id/editview_icon"
                android:src="@drawable/type_other"
                android:layout_weight="1"
                 android:scaleType="centerInside"
                android:contentDescription="@string/import_ing" />
  
			 <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="8dp"
	            android:layout_marginRight="8dp"
	            android:layout_marginTop="8dp"
	            android:baselineAligned="true"
	            android:layout_weight="5"
	            android:orientation="vertical" >

			      <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:baselineAligned="true"
		             android:layout_weight="2"
		            android:orientation="horizontal" >
			             <EditText
			                android:id="@+id/editview_title"
			                android:layout_width="0dp"
			                android:layout_weight="5"
			            	android:layout_height="wrap_content"
			                android:ellipsize="end"
			                android:gravity="bottom"
			                android:hint="@string/add_password_title_hint"
			                android:inputType="text"
			                android:maxLength="32"
			                android:maxLines="1"
			                android:textColor="@color/black"
			                android:textSize="16sp"
			                />
			         
			              <Button
			                  android:id="@+id/editview_title_spinner"
			                   android:layout_width="0dp"
			                  android:layout_weight="1"
			                  android:layout_height="32dp"
			                
							  android:background="@android:drawable/ic_menu_more"
			                  android:textSize="12sp"
			                  android:textColor="@color/title_color"
			     			  />
	                    </LinearLayout>
	            

                 <TextView					android:id="@+id/editview_category"
					android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:maxLines="1"
	                android:layout_weight="1"
	                android:text="@string/category"
	                android:textColor="@color/title_color"
	                android:textSize="13sp"
	                 />
               
          </LinearLayout>
             <CheckBox
                android:id="@+id/is_top"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:minWidth="90dp"
                android:layout_marginRight="8dp"
                android:checked="false"
                android:text="@string/isTop"
                android:textColor="@color/text_color"
                android:textSize="13sp" />
         
        </LinearLayout>

        <View
            android:id="@+id/main_item_line"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/editview_name_lab"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/user_name"
                android:textColor="@color/name_color"
                android:textSize="15sp" />

            <AutoCompleteTextView
                android:id="@+id/editview_name"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:completionThreshold="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/add_password_name_hint"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/password"
                android:textColor="@color/name_color"
                android:textSize="15sp" />

            <AutoCompleteTextView
                android:id="@+id/editview_password"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:completionThreshold="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/add_password_password_hint"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </LinearLayout>
           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/url"
                android:textColor="@color/title_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editview_url"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/add_password_url_hint"
                android:inputType="textUri"
                android:maxLength="60"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="16sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/main_item_note_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/selecter_retweet"
            android:visibility="visible" >

            <EditText
                android:id="@+id/editview_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/add_password_note_hint"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />
    </LinearLayout>

</ScrollView>