<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_card_background"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp" >

            <TextView
                android:id="@+id/main_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
             
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/main_date"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/main_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:alpha="0.8"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_item_password" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/main_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <View
                        android:id="@+id/main_item_line"
                        android:layout_width="match_parent"
                        android:layout_height="0.7dp"
                        android:background="@color/line_color" />

                    <TextView
                        android:id="@+id/main_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/app_name"
                        android:textColor="@color/gray"
                        android:textSize="13sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/main_top"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginLeft="6dp"
                    android:alpha="0.8"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_item_top" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/main_date"
                android:layout_alignTop="@id/main_date"
                android:layout_marginRight="2dp"
                android:layout_toLeftOf="@id/main_date"
                android:alpha="0.7"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/ic_item_date" />
        </RelativeLayout>

        <View
          
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
               android:id="@+id/main_name_lab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/user_name"
                android:textColor="@color/name_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/main_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/password"
                android:textColor="@color/name_color"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/main_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            android:baselineAligned="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/url"
                android:textColor="@color/title_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/main_url"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/add_password_url_hint"
               
                android:maxLength="60"
                android:maxLines="1"
                android:textColor="@color/title_color"
                android:textSize="16sp" />
        </LinearLayout>
        
        
        <FrameLayout
            android:id="@+id/main_note_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/table_retweet_background"
            android:visibility="visible" >

            <TextView
                android:id="@+id/main_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:textSize="13sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/main_copy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selecter_item_function"
                android:clickable="true"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:drawableLeft="@drawable/ic_item_copy"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/copy"
                    android:textColor="@color/item_function_text_color"
                    android:textSize="12sp" />
            </RelativeLayout>

            <View
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="@color/line_color" />

            <RelativeLayout
                android:id="@+id/main_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selecter_item_function"
                android:clickable="true"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:drawableLeft="@drawable/ic_item_delete"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/item_function_text_color"
                    android:textSize="12sp" />
            </RelativeLayout>

            <View
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="@color/line_color" />

            <RelativeLayout
                android:id="@+id/main_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selecter_item_function"
                android:clickable="true"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:drawableLeft="@drawable/ic_item_edit"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/edit"
                    android:textColor="@color/item_function_text_color"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>